App.css updated: removed html, body code that is already index.css; NavBar.jsx updated: text sizes and breakpoints + corrected spacing (made NavBar horizontal when less than 640px); HomePage.jsx update: title text increase + pawss images added.

--- a/vet-spring/src/App.css
+++ b/vet-spring/src/App.css
@@ -41,11 +41,6 @@
 
 /*FOR ALL PAGES//////////////////////////////////////////////////////// */
 
-html {
-  background-color: #DCDEFE;
-  font-family: 'Kiwi Maru', sans-serif;
-}
-
 /* Black button located in Login Page and Register Page */
 .custom-black-btn {
   background-color: #000000;
